# basic

./: .flake8  .gitignore  manage.py  pyproject.toml
vinumxp/: asgi.py  settings.py  urls.py  wsgi.py
vinumxp/contrib/: env.sample
vinumxp/users/: admin.py  apps.py  models.py
vinumxp/users/migrations/: 0001_initial.py
