[tool.poetry]
name = "vinumxp"
version = "0.1.0"
description = ""
authors = ["Paulo Marques <paulo.marques@incognito.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2"
python-decouple = "^3.7"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
